--- a/core/src/components/picker-internal/test/basic/index.html
+++ b/core/src/components/picker-internal/test/basic/index.html
@@ -128,8 +128,7 @@
         { text: 'Responsive', value: 'responsive' },
         { text: 'Full Stack', value: 'full-stack' },
         { text: 'Mobile First', value: 'mobile-first' },
-        { text: 'Serverless', value: 'serverless' },
-        { text: 'A really really really really long value', value: 'long' }
+        { text: 'Serverless', value: 'serverless' }
       ], 'full-stack');
 
       setPickerColumn('#second', [
