fix(footer): improve fade behavior

--- a/core/src/components/footer/footer.ios.scss
+++ b/core/src/components/footer/footer.ios.scss
@@ -27,10 +27,7 @@
 
 // iOS Footer - Collapse Fade
 // --------------------------------------------------
-.footer-collapse-fade {
-  --opacity: 0;
-}
 
 .footer-collapse-fade ion-toolbar {
-  --opacity: inherit;
+  --opacity-scale: inherit;
 }
