--- a/core/src/components/header/test/fade/index.html
+++ b/core/src/components/header/test/fade/index.html
@@ -61,7 +61,12 @@
           <ion-title>Header - Fade</ion-title>
         </ion-toolbar>
       </ion-header>
-      <ion-content fullscreen="true" class="ion-padding">
+      <ion-content fullscreen="true">
+        <!-- <ion-header collapse="condense">
+          <ion-toolbar>
+            <ion-title size="large">Header - Fade</ion-title>
+          </ion-toolbar>
+        </ion-header> -->
         <div class="grid">
           <div class="grid-item red"></div>
           <div class="grid-item green"></div>
@@ -72,6 +77,7 @@
           <div class="grid-item black"></div>
           <div class="grid-item orange"></div>
         </div>
+        <br /><br />
       </ion-content>
       <ion-footer collapse="fade" translucent="true">
         <ion-toolbar>
