fix(header): initial implementation with large title

--- a/core/src/components/header/test/fade/index.html
+++ b/core/src/components/header/test/fade/index.html
@@ -62,11 +62,11 @@
         </ion-toolbar>
       </ion-header>
       <ion-content fullscreen="true">
-        <!-- <ion-header collapse="condense">
+        <ion-header collapse="condense">
           <ion-toolbar>
             <ion-title size="large">Header - Fade</ion-title>
           </ion-toolbar>
-        </ion-header> -->
+        </ion-header>
         <div class="grid">
           <div class="grid-item red"></div>
           <div class="grid-item green"></div>
