fix(header): fade header now works with collapsible large title

--- a/core/src/components/header/test/fade/index.html
+++ b/core/src/components/header/test/fade/index.html
@@ -56,34 +56,35 @@
   </head>
   <body>
     <ion-app>
-      <ion-header collapse="fade" translucent="true">
-        <ion-toolbar>
-          <ion-title>Header - Fade</ion-title>
-        </ion-toolbar>
-      </ion-header>
-      <ion-content fullscreen="true">
-        <ion-header collapse="condense">
+      <div class="ion-page">
+        <ion-header collapse="fade" translucent="true">
           <ion-toolbar>
-            <ion-title size="large">Header - Fade</ion-title>
+            <ion-title>Mailboxes</ion-title>
           </ion-toolbar>
         </ion-header>
-        <div class="grid">
-          <div class="grid-item red"></div>
-          <div class="grid-item green"></div>
-          <div class="grid-item blue"></div>
-          <div class="grid-item yellow"></div>
-          <div class="grid-item pink"></div>
-          <div class="grid-item purple"></div>
-          <div class="grid-item black"></div>
-          <div class="grid-item orange"></div>
-        </div>
-        <br /><br />
-      </ion-content>
-      <ion-footer collapse="fade" translucent="true">
-        <ion-toolbar>
-          <ion-title>Footer - Fade</ion-title>
-        </ion-toolbar>
-      </ion-footer>
+        <ion-content fullscreen="true">
+          <ion-header collapse="condense">
+            <ion-toolbar>
+              <ion-title size="large">Mailboxes</ion-title>
+            </ion-toolbar>
+          </ion-header>
+          <div class="grid">
+            <div class="grid-item red"></div>
+            <div class="grid-item green"></div>
+            <div class="grid-item blue"></div>
+            <div class="grid-item yellow"></div>
+            <div class="grid-item pink"></div>
+            <div class="grid-item purple"></div>
+            <div class="grid-item black"></div>
+            <div class="grid-item orange"></div>
+          </div>
+        </ion-content>
+        <ion-footer collapse="fade" translucent="true">
+          <ion-toolbar>
+            <ion-title>Updated Just Now</ion-title>
+          </ion-toolbar>
+        </ion-footer>
+      </div>
     </ion-app>
   </body>
 </html>
