test(): improve test

--- a/core/src/components/header/test/fade/index.html
+++ b/core/src/components/header/test/fade/index.html
@@ -46,7 +46,6 @@
         display: grid;
         grid-template-columns: 1fr 1fr;
         grid-gap: 10px;
-        padding: 10px;
       }
 
       .grid-item {
@@ -68,7 +67,7 @@
               <ion-title size="large">Mailboxes</ion-title>
             </ion-toolbar>
           </ion-header>
-          <div class="grid">
+          <div class="grid ion-padding">
             <div class="grid-item red"></div>
             <div class="grid-item green"></div>
             <div class="grid-item blue"></div>
