test(footer): add footer test

--- a/core/src/components/footer/test/fade/index.html
+++ b/core/src/components/footer/test/fade/index.html
@@ -2,7 +2,7 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="UTF-8">
-    <title>Header - Fade</title>
+    <title>Footer - Fade</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no">
     <link href="../../../../../css/ionic.bundle.css" rel="stylesheet">
     <link href="../../../../../scripts/testing/styles.css" rel="stylesheet">
@@ -56,7 +56,7 @@
   <body>
     <ion-app>
       <div class="ion-page">
-        <ion-header collapse="fade" translucent="true">
+        <ion-header translucent="true">
           <ion-toolbar>
             <ion-title>Mailboxes</ion-title>
           </ion-toolbar>
@@ -78,7 +78,7 @@
             <div class="grid-item orange"></div>
           </div>
         </ion-content>
-        <ion-footer translucent="true">
+        <ion-footer collapse="fade" translucent="true">
           <ion-toolbar>
             <ion-title>Updated Just Now</ion-title>
           </ion-toolbar>
