test(breadcrumbs): Remove breadcrumb from correct parent

--- a/core/src/components/breadcrumbs/test/basic/index.html
+++ b/core/src/components/breadcrumbs/test/basic/index.html
@@ -507,7 +507,7 @@
     };
 
     async function removeItem() {
-      breadcrumbs.children[wraper.children.length-1].remove();
+      breadcrumbs.children[breadcrumbs.children.length-1].remove();
     };
   </script>
 
