--- a/core/src/components/menu/test/basic/index.html
+++ b/core/src/components/menu/test/basic/index.html
@@ -32,6 +32,9 @@
       </ion-header>
       <ion-content>
         <ion-list>
+          <ion-item>
+            <ion-button id="start-menu-button">Button</ion-button>
+          </ion-item>
           <ion-item>Menu Item</ion-item>
           <ion-item>Menu Item</ion-item>
           <ion-item>Menu Item</ion-item>
@@ -82,7 +85,7 @@
         </ion-toolbar>
       </ion-header>
       <ion-content class="ion-padding">
-        <ion-button expand="block" onclick="openFirst()">Open Start Menu</ion-button>
+        <ion-button expand="block" id="open-first" onclick="openFirst()">Open Start Menu</ion-button>
         <ion-button expand="block" onclick="openEnd()">Open End Menu</ion-button>
         <ion-button expand="block" onclick="openCustom()">Open Custom Menu</ion-button>
       </ion-content>
