--- a/core/src/components/datetime/datetime.scss
+++ b/core/src/components/datetime/datetime.scss
@@ -19,14 +19,9 @@
   overflow: hidden;
 }
 
-:host(.datetime-presentation-date-time),
-:host(.datetime-presentation-time-date),
-:host(.datetime-presentation-date) {
-  height: 100%;
-}
-
 :host(.datetime-size-fixed) {
   width: 350px;
+  height: auto;
 }
 
 :host(.datetime-size-cover) {
