--- a/core/src/components/datetime/test/display/index.html
+++ b/core/src/components/datetime/test/display/index.html
@@ -21,17 +21,17 @@
   <body>
     <label for="presentation">Presentation</label>
     <select id="presentation" onchange="changePresentation(event)">
-      <option selected>date-time</option>
-      <option>time-date</option>
-      <option>date</option>
-      <option>time</option>
+      <option value="date-time" selected>date-time</option>
+      <option value="time-date">time-date</option>
+      <option value="date">date</option>
+      <option value="time">time</option>
     </select>
 
 
     <label for="size">Size</label>
     <select id="size" onchange="changeSize(event)">
-      <option selected>fixed</option>
-      <option>cover</option>
+      <option value="fixed" selected>fixed</option>
+      <option value="cover">cover</option>
     </select>
 
     <br /><br />
