--- a/core/src/components/item/test/inputs/index.html
+++ b/core/src/components/item/test/inputs/index.html
@@ -66,7 +66,7 @@
 
           <ion-item class="rounded">
             <ion-label>Input (rounded)</ion-label>
-            <ion-input name="input" id="text"></ion-input>
+            <ion-input name="input3" id="rounded"></ion-input>
           </ion-item>
 
           <ion-item>
@@ -207,7 +207,7 @@
   </style>
 
   <script>
-    var ids = ['item', 'datetime', 'select', 'toggle', 'text', 'placeholder', 'checkbox', 'toggle', 'range'];
+    var ids = ['item', 'datetime', 'select', 'toggle', 'text', 'placeholder', 'checkbox', 'toggle', 'range', 'rounded'];
     var isDisabled = false;
 
     const clickableItem = document.querySelector('#clickableItem')
@@ -247,8 +247,8 @@
     }
 
     function setSomeValue() {
-      const {datetime, select, toggle, text, placeholder, checkbox, range} = getInputs();
-      text.value = placeholder.value = 'Some text';
+      const {datetime, select, toggle, text, placeholder, checkbox, range, rounded} = getInputs();
+      text.value = placeholder.value = rounded.value = 'Some text';
       toggle.checked = checkbox.checked = true;
       datetime.value = '2016-12-09';
       range.value = 20;
