feat(textarea): revised approach to auto grow
Fix the usage of floating labels within outline ion-item.

--- a/core/src/components/textarea/textarea.scss
+++ b/core/src/components/textarea/textarea.scss
@@ -71,22 +71,39 @@
   --padding-start: 0;
 }
 
-
 // Native Textarea
 // --------------------------------------------------
 
 .textarea-wrapper {
+  display: grid;
+
   min-width: inherit;
   max-width: inherit;
   min-height: inherit;
   max-height: inherit;
+
+  &::after {
+    content: attr(data-replicated-value) " ";
+    white-space: pre-wrap;
+    visibility: hidden;
+  }
+}
+
+.textarea-wrapper::after,
+.native-textarea {
+  @include padding(
+    var(--padding-top),
+    var(--padding-end),
+    var(--padding-bottom),
+    var(--padding-start)
+  );
+  @include text-inherit();
+  grid-area: 1 / 1 / 2 / 2;
 }
 
 .native-textarea {
   @include border-radius(var(--border-radius));
   @include margin(0);
-  @include padding(var(--padding-top), var(--padding-end), var(--padding-bottom), var(--padding-start));
-  @include text-inherit();
 
   display: block;
 
@@ -101,6 +118,7 @@
   background: transparent;
   box-sizing: border-box;
   resize: none;
+  overflow: hidden;
   appearance: none;
 
   &::placeholder {
@@ -135,7 +153,6 @@
 
   pointer-events: none;
 }
-
 
 // Item Floating: Placeholder
 // ----------------------------------------------------------------
