fix(modal): border radius is now correctly applied to card modals

--- a/core/src/components/modal/test/spec/index.html
+++ b/core/src/components/modal/test/spec/index.html
@@ -18,6 +18,9 @@
     window.createAnimation = createAnimation;
   </script>
   <style>
+  ion-modal {
+    --border-radius: 20px !important;
+  }
   #modal-header {
     padding-top: 5px !important;
     height: 55px;
