fix: fix property precedence
re #20532

--- a/core/src/components/datetime/test/basic/index.html
+++ b/core/src/components/datetime/test/basic/index.html
@@ -191,9 +191,14 @@
           <ion-label>No display-format</ion-label>
           <ion-datetime></ion-datetime>
         </ion-item>
-
       </ion-list>
 
+      <ion-list>
+        <ion-item>
+          <ion-label>Default picker date without setting ion-datetime value</ion-label>
+          <ion-datetime default-picker-value="1995-04-05T00:00:00Z"></ion-datetime>
+        </ion-item>
+      </ion-list>
     </ion-content>
 
     <style>
