docs(label): document z-index usage in label

--- a/core/src/components/label/label.md.scss
+++ b/core/src/components/label/label.md.scss
@@ -69,6 +69,7 @@
   background-color: $item-md-background;
 
   overflow: visible;
+  // Places the label on top of the item outline
   z-index: 3;
 
   &::before,
