fix(datetime): localize test

--- a/core/src/components/datetime/test/set-value/index.html
+++ b/core/src/components/datetime/test/set-value/index.html
@@ -34,7 +34,7 @@
       </ion-toolbar>
     </ion-header>
     <ion-content class="ion-padding">
-      <ion-datetime value="2021-11-22T14:23:00.000Z"></ion-datetime>
+      <ion-datetime value="2021-11-22T14:23:00.000Z" locale="en-US"></ion-datetime>
     </ion-content>
   </ion-app>
 </body>
