--- a/core/src/css/core.scss
+++ b/core/src/css/core.scss
@@ -286,7 +286,7 @@ ion-accordion-group > ion-accordion:last-of-type ion-item {
   --border-width: 0px;
 }
 
-ion-accordion.accordion-animated > [slot="header"] > .ion-accordion-toggle-icon {
+ion-accordion.accordion-animated > [slot="header"] .ion-accordion-toggle-icon {
   transition: 300ms transform cubic-bezier(0.25, 0.8, 0.5, 1);
 }
 
@@ -302,8 +302,8 @@ ion-accordion.accordion-animated > [slot="header"] > .ion-accordion-toggle-icon 
  * of one accordion should not affect any accordions inside
  * of a nested accordion group.
  */
-ion-accordion.accordion-expanding > [slot="header"] > .ion-accordion-toggle-icon,
-ion-accordion.accordion-expanded > [slot="header"] > .ion-accordion-toggle-icon {
+ion-accordion.accordion-expanding > [slot="header"] .ion-accordion-toggle-icon,
+ion-accordion.accordion-expanded > [slot="header"] .ion-accordion-toggle-icon {
   transform: rotate(180deg);
 }
 
