--- a/core/src/components/accordion/test/nested/index.html
+++ b/core/src/components/accordion/test/nested/index.html
@@ -74,6 +74,70 @@
               </ion-accordion>
             </ion-accordion-group>
           </div>
+          <div class="grid-item">
+            <h2>Nested Disabled</h2>
+            <ion-accordion-group expand="inset" value="attractions">
+              <ion-accordion value="attractions">
+                <ion-item color="primary" slot="header" button detail="false">
+                  <ion-icon slot="start" ios="film-outline" md="film"></ion-icon>
+                  <ion-label> Attractions</ion-label>
+                </ion-item>
+
+                <ion-accordion-group slot="content" value="second" disabled="true">
+                  <ion-accordion value="first">
+                    <ion-item color="primary" slot="header" button detail="false">
+                      <ion-label>First Item</ion-label>
+                    </ion-item>
+                    <div slot="content">First item content!</div>
+                  </ion-accordion>
+                  <ion-accordion value="second">
+                    <ion-item color="warning" slot="header" button detail="false">
+                      <ion-label>Second Item</ion-label>
+                    </ion-item>
+                    <div slot="content">Second item content!</div>
+                  </ion-accordion>
+                  <ion-accordion value="third">
+                    <ion-item color="tertiary" slot="header" button detail="false">
+                      <ion-label>Third Item</ion-label>
+                    </ion-item>
+                    <div slot="content">Third item content!</div>
+                  </ion-accordion>
+                </ion-accordion-group>
+              </ion-accordion>
+            </ion-accordion-group>
+          </div>
+          <div class="grid-item">
+            <h2>Nested Parent Disabled</h2>
+            <ion-accordion-group expand="inset" value="attractions" disabled="true">
+              <ion-accordion value="attractions">
+                <ion-item color="primary" slot="header" button detail="false">
+                  <ion-icon slot="start" ios="film-outline" md="film"></ion-icon>
+                  <ion-label> Attractions</ion-label>
+                </ion-item>
+
+                <ion-accordion-group slot="content" value="second">
+                  <ion-accordion value="first">
+                    <ion-item color="primary" slot="header" button detail="false">
+                      <ion-label>First Item</ion-label>
+                    </ion-item>
+                    <div slot="content">First item content!</div>
+                  </ion-accordion>
+                  <ion-accordion value="second">
+                    <ion-item color="warning" slot="header" button detail="false">
+                      <ion-label>Second Item</ion-label>
+                    </ion-item>
+                    <div slot="content">Second item content!</div>
+                  </ion-accordion>
+                  <ion-accordion value="third">
+                    <ion-item color="tertiary" slot="header" button detail="false">
+                      <ion-label>Third Item</ion-label>
+                    </ion-item>
+                    <div slot="content">Third item content!</div>
+                  </ion-accordion>
+                </ion-accordion-group>
+              </ion-accordion>
+            </ion-accordion-group>
+          </div>
         </div>
       </ion-content>
     </ion-app>
