--- a/core/src/components/item/item.scss
+++ b/core/src/components/item/item.scss
@@ -49,6 +49,7 @@
    * @prop --highlight-color-focused: The color of the highlight on the item when focused
    * @prop --highlight-color-valid: The color of the highlight on the item when valid
    * @prop --highlight-color-invalid: The color of the highlight on the item when invalid
+   *
    */
   --border-radius: 0px;
   --border-width: 0px;
@@ -63,6 +64,7 @@
   --inner-padding-start: 0px;
   --inner-padding-end: 0px;
   --inner-box-shadow: none;
+  --bottom-padding-start: 0px;
   --show-full-highlight: 0;
   --show-inset-highlight: 0;
   --detail-icon-color: initial;
@@ -281,6 +283,26 @@ button, a {
   box-sizing: border-box;
 }
 
+
+// Item Bottom
+// --------------------------------------------------
+
+.item-bottom {
+  @include margin(0);
+  @include padding(
+    0,
+    var(--inner-padding-end),
+    0,
+    calc(var(--padding-start) + var(--ion-safe-area-left, 0px) + var(--bottom-padding-start))
+  );
+
+  display: flex;
+
+  justify-content: space-between;
+
+}
+
+
 // Item Detail Icon
 // --------------------------------------------------
 
@@ -488,22 +510,6 @@ button, a {
 
 ion-ripple-effect {
   color: var(--ripple-color);
-}
-
-// Item Button Ripple effect
-// --------------------------------------------------
-
-.item-bottom {
-  @include margin(0);
-  @include padding(
-    var(--padding-top),
-    var(--inner-padding-end),
-    var(--padding-bottom),
-    calc(var(--padding-start) + var(--ion-safe-area-left, 0px) + var(--bottom-padding-start, 0px))
-  );
-  display: flex;
-
-  justify-content: space-between;
 }
 
 :host(.item-fill-solid) ::slotted([slot="start"]),
