fix(item): matches material design character counter

--- a/core/src/components/item/item.scss
+++ b/core/src/components/item/item.scss
@@ -529,6 +529,16 @@ ion-ripple-effect {
   color: var(--highlight-color-invalid);
 }
 
+// Item Max Length Counter
+// --------------------------------------------------
+
+.item-counter {
+  @include margin-horizontal(auto, null);
+
+  padding-inline-start: 16px;
+
+  white-space: nowrap;
+}
 
 // Item: Reduced Motion
 // --------------------------------------------------
