fix(datetime): prevent navigating to disabled months

--- a/core/src/components/datetime/datetime.scss
+++ b/core/src/components/datetime/datetime.scss
@@ -216,6 +216,13 @@
   width: 100%;
 }
 
+:host .calendar-body .calendar-month-disabled {
+  /**
+   * Disables swipe gestures for scroll-snap containers
+   */
+  display: none;
+}
+
 /**
  * Hide scrollbars on Chrome and Safari
  */
