test(item): add extra combinations for disabled test

--- a/core/src/components/item/test/disabled/index.html
+++ b/core/src/components/item/test/disabled/index.html
@@ -116,6 +116,24 @@
         </ion-item>
 
         <ion-item>
+          <ion-radio disabled slot="start"></ion-radio>
+          <ion-checkbox slot="start"></ion-checkbox>
+          <ion-label>Radio + Checkbox</ion-label>
+        </ion-item>
+
+        <ion-item>
+          <ion-radio slot="start"></ion-radio>
+          <ion-checkbox disabled slot="start"></ion-checkbox>
+          <ion-label>Radio + Checkbox, disabled input second</ion-label>
+        </ion-item>
+
+        <ion-item>
+          <ion-checkbox slot="start"></ion-checkbox>
+          <ion-radio disabled slot="start"></ion-radio>
+          <ion-label>Checkbox + Radio, disabled input second</ion-label>
+        </ion-item>
+
+        <ion-item>
           <ion-label>Disabled Selects</ion-label>
           <ion-select placeholder="month">
             <ion-select-option value="1">January</ion-select-option>
