test(datetime): add time-compact presentation test
Add datetime presentation in preparation for CI

--- a/core/src/components/datetime/test/presentation/index.html
+++ b/core/src/components/datetime/test/presentation/index.html
@@ -89,6 +89,12 @@
               presentation="year"
             ></ion-datetime>
           </div>
+          <div class="grid-item">
+            <h2>time-compact</h2>
+            <ion-datetime
+              presentation="time-compact"
+            ></ion-datetime>
+          </div>
         </div>
       </ion-content>
     </ion-app>
