fix(input): autofill appearance for desktop platform
Resolves #18141

--- a/core/src/components/input/input.scss
+++ b/core/src/components/input/input.scss
@@ -57,6 +57,24 @@
   color: current-color(base);
 }
 
+@keyframes onAutoFillStart {
+  from {
+    /**/
+  }
+  to {
+    /**/
+  }
+}
+
+@keyframes onAutoFillCancel {
+  from {
+    /**/
+  }
+  to {
+    /**/
+  }
+}
+
 // Native Text Input
 // --------------------------------------------------
 
@@ -93,7 +111,20 @@
   }
 
   &:-webkit-autofill {
+     // Expose a hook for JavaScript when auto fill is shown.
+    // JavaScript can capture 'animationstart' events
+    animation-name: onAutoFillStart;
+
+    transition: background-color 50000s ease-in-out 0s;
+
     background-color: transparent;
+
+  }
+
+  &:not(:-webkit-autofill) {
+    // Expose a hook for JS onAutoFillCancel
+    // JavaScript can capture 'animationstart' events
+    animation-name: onAutoFillCancel;
   }
 
   &:invalid {
