--- a/core/src/components/refresher/test/spec/index.html
+++ b/core/src/components/refresher/test/spec/index.html
@@ -29,21 +29,21 @@
       </ion-toolbar>
     </ion-header>
 
-    <ion-content style="--background: linear-gradient(180deg, rgba(2,0,36,1) 0%, rgba(0,212,255,1) 100%) fixed;">
+    <ion-content>
       <ion-refresher id="refresher" slot="fixed">
         <ion-refresher-content></ion-refresher-content>
       </ion-refresher>
 
-      <!-- <ion-header collapse="condense">
+      <ion-header collapse="condense">
         <ion-toolbar>
           <ion-title size="large">All Inboxes</ion-title>
         </ion-toolbar>
         <ion-toolbar>
           <ion-searchbar></ion-searchbar>
         </ion-toolbar>
-      </ion-header> -->
+      </ion-header>
 
-      <ion-list id="list" style="background-color: rgba(240, 248, 255, 0);"></ion-list>
+      <ion-list id="list"></ion-list>
       
       <ion-fab vertical="bottom" horizontal="end" slot="fixed">
         <ion-fab-button onclick="toggleHeader()">
@@ -85,9 +85,8 @@
     const list = document.getElementById('list');
     const refresher = document.getElementById('refresher');
     
-    refresher.addEventListener('ionPull', async () => {
-      const progress = await refresher.getProgress();
-      console.log('ionPull', progress);
+    refresher.addEventListener('ionPull', () => {
+      console.log('ionPull');
     });
     
     refresher.addEventListener('ionStart', () => {
@@ -109,7 +108,7 @@
     function render() {
       let html = '';
       for (let item of items) {
-        html += `<ion-item style="padding: 20px 20px 0px 20px;" button>${item}</ion-item>`;
+        html += `<ion-item button>${item}</ion-item>`;
       }
       list.innerHTML = html;
     }
