feat(datetime): add display prop & numpad UI
We started to get increasingly negative
feedback for the timepicker we used in our app,
so I opted to make the UX better on Desktop.

The Display prop controls, wether you want the datetime
component to show picker wheels, or only text inputs.

Feel free to check out the 'display' test and try out the UI.

--- a/core/src/components/datetime/datetime.scss
+++ b/core/src/components/datetime/datetime.scss
@@ -334,6 +334,30 @@
 
   appearance: none;
 }
+:host .time-body-numpad {
+  @include padding(6px, 6px, 6px, 6px);
+  display: flex;
+  justify-items: center;
+
+  align-items: center;
+
+  text-align: center;
+  input {
+    @include padding(0px,0px,0px,0px);
+
+    max-width: 18pt;
+
+    border: none;
+
+    background: none;
+
+    font-family: inherit;
+    font-size: inherit;
+  }
+  input:focus {
+    border: 2px solid currentColor(base);
+  }
+}
 
 :host .time-body-active {
   color: current-color(base);
