--- a/core/src/components/picker-internal/picker-internal.scss
+++ b/core/src/components/picker-internal/picker-internal.scss
@@ -11,6 +11,14 @@
   align-items: center;
   justify-content: center;
 
+  /**
+   * Picker columns should display
+   * in the order in which developers
+   * added them and should ignore
+   * LTR vs RTL directions.
+   */
+  direction: ltr;
+
   width: 100%;
   height: 200px;
 
