chore(): show full line not inset

--- a/core/src/components/accordion/test/standalone/index.html
+++ b/core/src/components/accordion/test/standalone/index.html
@@ -95,7 +95,7 @@
                 Accordion
               </ion-item>
               <div slot="content">
-                <ion-item>Some Item</ion-item>
+                <ion-item lines="full">Some Item</ion-item>
               </div>
             </ion-accordion>
           </ion-accordion-group>
