test(): add additional test

--- a/core/src/components/menu/test/focus-trap/index.html
+++ b/core/src/components/menu/test/focus-trap/index.html
@@ -25,6 +25,7 @@
             <ion-content class="ion-padding">
               Modal content
               <ion-button onclick="dismissModal()">Dismiss Modal</ion-button>
+              <ion-button id="other-button">Other Button</ion-button>
             </ion-content>
           </ion-modal>
         </ion-content>
