chore(): rebase clean-up

--- a/core/src/components/datetime/test/zoom/index.html
+++ b/core/src/components/datetime/test/zoom/index.html
@@ -32,7 +32,7 @@
       <ion-button id="open-modal">Present Modal</ion-button>
       <ion-modal trigger="open-modal" id="modal">
         <div id="background">
-          <ion-datetime id="picker" value="2022-02-01" locale="en-US"></ion-datetime>
+          <ion-datetime id="picker" value="2022-02-01"></ion-datetime>
         </div>
       </ion-modal>
     </ion-content>
