fix(): clean-up error logs and imports

--- a/core/src/components/refresher/test/custom-scroll-target/index.html
+++ b/core/src/components/refresher/test/custom-scroll-target/index.html
@@ -44,7 +44,7 @@
       </ion-toolbar>
     </ion-header>
 
-    <div id="content" class="ion-content">
+    <div id="content" class="ion-content-scroll-host">
       <div id="background-content"></div>
       <div style="position: absolute; left: 0; top: 0; width: 100%;">
         <ion-refresher id="refresher" slot="fixed">
