--- a/core/src/components/infinite-scroll/test/basic/index.html
+++ b/core/src/components/infinite-scroll/test/basic/index.html
@@ -4,16 +4,17 @@
 <head>
   <meta charset="UTF-8">
   <title>Infinite Scroll - Basic</title>
-  <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no">
+  <meta name="viewport"
+    content="width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no">
   <link href="../../../../../css/ionic.bundle.css" rel="stylesheet">
   <link href="../../../../../scripts/testing/styles.css" rel="stylesheet">
   <script src="../../../../../scripts/testing/scripts.js"></script>
   <script nomodule src="../../../../../dist/ionic/ionic.js"></script>
-  <script type="module" src="../../../../../dist/ionic/ionic.esm.js"></script></head>
+  <script type="module" src="../../../../../dist/ionic/ionic.esm.js"></script>
+</head>
 
 <body>
   <ion-app>
-
 
     <ion-header>
       <ion-toolbar>
@@ -35,8 +36,6 @@
       </ion-infinite-scroll>
     </ion-content>
 
-
-
   </ion-app>
 
   <script>
@@ -52,6 +51,8 @@
       await wait(500);
       infiniteScroll.complete();
       appendItems();
+      // Custom event consumed in the e2e tests
+      document.dispatchEvent(new CustomEvent('ionInfiniteComplete'));
 
       console.log('Done');
     });
