test(footer): custom scroll target host

--- a/core/src/components/footer/test/scroll-target/index.html
+++ b/core/src/components/footer/test/scroll-target/index.html
@@ -54,7 +54,7 @@
       height: 200px;
     }
 
-    #scroll-container {
+    #scroll-target {
       position: absolute;
       top: 0;
       left: 0;
@@ -76,7 +76,7 @@
           <ion-title>Mailboxes</ion-title>
         </ion-toolbar>
       </ion-header>
-      <div id="scroll-container" class="ion-content-scroll-host">
+      <div id="scroll-target" class="ion-content-scroll-host">
         <div class="grid ion-padding">
           <div class="grid-item red"></div>
           <div class="grid-item green"></div>
