test(refresher): custom scroll target

--- a/core/src/components/refresher/test/basic/index.html
+++ b/core/src/components/refresher/test/basic/index.html
@@ -4,12 +4,14 @@
 <head>
   <meta charset="UTF-8">
   <title>Refresher - Basic</title>
-  <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no">
+  <meta name="viewport"
+    content="width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no">
   <link href="../../../../../css/ionic.bundle.css" rel="stylesheet">
   <link href="../../../../../scripts/testing/styles.css" rel="stylesheet">
   <script src="../../../../../scripts/testing/scripts.js"></script>
   <script nomodule src="../../../../../dist/ionic/ionic.js"></script>
-  <script type="module" src="../../../../../dist/ionic/ionic.esm.js"></script></head>
+  <script type="module" src="../../../../../dist/ionic/ionic.esm.js"></script>
+</head>
 
 <body>
   <ion-app>
@@ -21,11 +23,8 @@
 
     <ion-content>
       <ion-refresher id="refresher" slot="fixed">
-        <ion-refresher-content
-          pulling-icon="arrow-down-outline"
-          pulling-text="Pull to refresh..."
-          refreshing-text="Refreshing..."
-          refreshing-spinner="circles">
+        <ion-refresher-content pulling-icon="arrow-down-outline" pulling-text="Pull to refresh..."
+          refreshing-text="Refreshing..." refreshing-spinner="circles">
         </ion-refresher-content>
       </ion-refresher>
 
@@ -48,6 +47,8 @@
       items = items.concat(data);
       refresher.complete();
       render();
+      // Custom event consumed by e2e tests
+      document.dispatchEvent(new CustomEvent('ionRefreshComplete'));
       console.log('Done');
     });
     function render() {
