fix(footer): usage with ion-content and scroll target

--- a/core/src/components/footer/test/scroll-target/index.html
+++ b/core/src/components/footer/test/scroll-target/index.html
@@ -76,18 +76,20 @@
           <ion-title>Mailboxes</ion-title>
         </ion-toolbar>
       </ion-header>
-      <div id="scroll-target" class="ion-content-scroll-host">
-        <div class="grid ion-padding">
-          <div class="grid-item red"></div>
-          <div class="grid-item green"></div>
-          <div class="grid-item blue"></div>
-          <div class="grid-item yellow"></div>
-          <div class="grid-item pink"></div>
-          <div class="grid-item purple"></div>
-          <div class="grid-item black"></div>
-          <div class="grid-item orange"></div>
+      <ion-content fullscreen="true">
+        <div id="scroll-target" class="ion-content-scroll-host">
+          <div class="grid ion-padding">
+            <div class="grid-item red"></div>
+            <div class="grid-item green"></div>
+            <div class="grid-item blue"></div>
+            <div class="grid-item yellow"></div>
+            <div class="grid-item pink"></div>
+            <div class="grid-item purple"></div>
+            <div class="grid-item black"></div>
+            <div class="grid-item orange"></div>
+          </div>
         </div>
-      </div>
+      </ion-content>
       <ion-footer collapse="fade" translucent="true">
         <ion-toolbar>
           <ion-title>Updated Just Now</ion-title>
